# apache_airflow

./: Makefile  README.md  pyproject.toml
dags/: bash_dag.py
